--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-fileupload": "^1.0.0",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
