--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "globalReturn": true
   },
   "rules": {
+    "prettier/prettier": "error"
     "comma-dangle": [ 2, "never" ],
     "no-console": 1,
     "no-constant-condition": 2,
@@ -116,7 +117,7 @@
     "array-bracket-spacing": [ 2, "always" ],
     "block-spacing": [ 2, "always" ],
     "brace-style": [ 2, "1tbs", { "allowSingleLine": false } ],
-    "camelcase": [ 2, { "properties": "always" } ],
+    // "camelcase": [ 2, { "properties": "always" } ],
     "comma-spacing": [ 2, { "before": false, "after": true } ],
     "comma-style": [ 2, "last" ],
     "computed-property-spacing": [ 2, "always" ],
